[tool.poetry]
name = "bluemap-cdn-refresher"
version = "0.0.1-dev"
description = "refresh cdn url when bluemap tiles updated"
authors = ["xyqyear <xyqyear@gmail.com>"]
readme = "README.md"
packages = [{include = "bluemap_cdn_refresher"}]

[tool.poetry.dependencies]
python = "^3.11"
ruamel-yaml = "^0.17.32"
xxhash = "^3.3.0"

[tool.poetry.group.dev.dependencies]
black = "^23.3.0"
pytest = "^7.3.1"
coverage = "^7.2.7"
ipykernel = "^6.25.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
